# jax-nemotron

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: audio_milestone2_spec.md
examples/: README.md  run_tiny_cpu.py
scripts/: coherence_gate.py  convert_hf_to_orbax.py  generate.py  generate_audio.py  infer_text.py
src/jax_nemotron/: __init__.py  audio_encoder.py  config.py  nemotron_h.py  nemotron_omni.py
tests/: test_converter_units.py  test_name_coverage.py  test_omni_shape.py  test_orbax_roundtrip.py  test_shape_gate.py  test_sound_name_coverage.py
